Cleaned up training page, fixed top score bug with long usernames, fixed bug on landing page with button + scoreboard text wraping. stats bar graph.

--- a/WebContent/assets/css/landing-style.css
+++ b/WebContent/assets/css/landing-style.css
@@ -72,7 +72,7 @@ div#main p {
 }
 
 #main #action {
-  float: left;
+
 }
 
 #main #action input.playnow {
